bin/testsuite/tests/compiler/src/errors/compiler1982.swg
#global testerror "Err0587"

#test
{
    var x1982'b: s32
}